# Rust_Programming

./: .gitignore  .secrets.baseline  Cargo.toml  Foreword.md  Introduction.md  Makefile  README.md
exercises/01_hello_world/: main.rs
exercises/02_variables_and_types/: main.rs
exercises/03_control_flow/: main.rs
exercises/04_functions/: main.rs
exercises/05_ownership/: main.rs
exercises/06_borrowing_and_references/: main.rs
exercises/07_slices_and_arrays/: main.rs
exercises/08_structs/: main.rs
exercises/09_enums_and_pattern_matching/: main.rs
exercises/10_error_handling/: main.rs
exercises/11_traits/: main.rs
exercises/12_generics/: main.rs
exercises/13_collections/: main.rs
exercises/14_closures_and_iterators/: main.rs
exercises/15_lifetimes/: main.rs
exercises/16_smart_pointers/: main.rs
exercises/17_modules_and_cargo/: greeting.rs  main.rs
exercises/18_testing/: main.rs
exercises/19_threads/: main.rs
exercises/20_channels/: main.rs
exercises/21_shared_state/: main.rs
exercises/22_file_io/: main.rs
exercises/23_custom_errors/: main.rs
exercises/24_json_from_scratch/: main.rs
exercises/25_tcp_sockets/: main.rs
exercises/26_cli_and_subprocess/: main.rs
exercises/27_unsafe_rust/: main.rs
exercises/28_macros/: main.rs
exercises/29_async_await/: main.rs
exercises/30_benchmarking/: main.rs
topics/01_types/: types.md
topics/02_ownership_and_borrowing/: ownership_and_borrowing.md
topics/03_memory/: memory.md
topics/04_strings/: strings.md
topics/05_structs_and_traits/: structs_and_traits.md
topics/06_error_handling/: error_handling.md
topics/07_concurrency/: concurrency.md
topics/08_generics/: generics.md
topics/09_testing/: testing.md
topics/10_file_io/: file_io.md
topics/11_collections/: collections.md
topics/12_lifetimes/: lifetimes.md
topics/13_smart_pointers/: smart_pointers.md
topics/14_cargo_and_modules/: cargo_and_modules.md
topics/15_closures_and_iterators/: closures_and_iterators.md
topics/16_unsafe_rust/: unsafe_rust.md
topics/17_macros/: macros.md
topics/18_async/: async.md
topics/19_sockets_and_networking/: sockets_and_networking.md
